# webcam_capture

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
